Some bugfixes for multiple reports